--- a/web/styles/style.css
+++ b/web/styles/style.css
@@ -148,10 +148,12 @@ h1 {
 
 .circle:first-of-type {
     margin-left: 5px;
+    margin-right: 2.5px;
 }
 
 .circle + .circle {
-    margin-left: 5px;
+    margin-left: 2.5px;
+    margin-right: 2.5px;
 }
 
 .circle.blue {
