--- a/web/styles/style.css
+++ b/web/styles/style.css
@@ -139,6 +139,12 @@ h1 {
     text-decoration: line-through;
 }
 
+.symbols {
+    height: 40px;
+    width: 40px;
+}
+
+
 .circle {
     width: 15px;
     height: 15px;
