--- a/web/styles/style.css
+++ b/web/styles/style.css
@@ -14,7 +14,7 @@ a {
 
 p {
     font-family: Arial, Helvetica, sans-serif;
-    color: grey;
+    color: black;
     margin-bottom: 0rem !important; 
 }
 
@@ -180,6 +180,10 @@ h1 {
 
 .circle.yellow {
     background-color: yellow;
+}
+
+.restaurant-link {
+    text-decoration: underline !important;
 }
 
 .weatherrow {
