--- a/web/styles/style.css
+++ b/web/styles/style.css
@@ -1,3 +1,7 @@
+a {
+    text-decoration: none !important;
+}
+
 body {
     max-width: 414px;
     max-height: 736px;
@@ -8,8 +12,8 @@ header {
     height: 50px;
 }
 
-a {
-    text-decoration: none !important;
+label {
+    margin-bottom: .2rem;
 }
 
 p {
