--- a/web/styles/style.css
+++ b/web/styles/style.css
@@ -57,6 +57,17 @@ h1 {
     margin-bottom: 0.5rem;
 }
 
+.back-button {
+    height: 40px;
+    width: 40px;
+    background-image: url(../img/arrow.png);
+    background-size: 100% 100%;
+    background-color: white;
+    border: 0;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
 .widthLimiter {
     width: 100%;
 }
